<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/AppTheme"
    android:orientation="vertical"
    android:background="@drawable/b"
    >

    <Button
        android:id="@+id/btnOpen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:text="@string/connect" />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:orientation="vertical" >
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <View
                android:id="@+id/devider0"
                android:layout_width="fill_parent"
                android:layout_height="3px"
                android:background="?android:attr/listDivider" />
            <LinearLayout
                android:id="@+id/conn_type"
                android:layout_below="@id/devider0"
                android:layout_marginTop="5dip"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="#fff"
                    android:id="@+id/tvType"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dip"
                    android:layout_gravity="center_vertical"
                    android:text="@string/connect_type"
                    />
                <RadioGroup
                    android:layout_marginLeft="30dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:layout_weight="1"
                        android:id="@+id/bluetooth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/connect_bluetooth"
                        android:textColor="#fff"
                        />
                    <RadioButton
                        android:layout_weight="1"
                        android:id="@+id/usb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/connect_usb"
                        android:textColor="#fff"
                        />
                    <RadioButton
                        android:layout_weight="1"
                        android:id="@+id/wifi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/connect_wifi"
                        android:textColor="#fff"
                        />
                </RadioGroup>
            </LinearLayout>
            <View
                android:id="@+id/devider123"
                android:layout_width="fill_parent"
                android:layout_height="3px"
                android:layout_below="@id/conn_type"
                android:background="?android:attr/listDivider" />
            <LinearLayout
                android:id="@+id/printer_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/conn_type"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >
                <TextView
                    android:textColor="#fff"
                    android:id="@+id/printType_text"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dip"
                    android:text="@string/choose_printer_type" />
                <RadioGroup
                    android:layout_marginLeft="30dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/type_remin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/printer_type_remin"
                        android:textColor="#fff"
                        android:layout_weight="1"
                        />
                    <RadioButton
                        android:id="@+id/type_styuls"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/printer_type_styuls"
                        android:textColor="#fff"
                        android:layout_weight="1"
                        />
                </RadioGroup>
            </LinearLayout>
            <View
                android:id="@+id/devider1"
                android:layout_width="fill_parent"
                android:layout_height="3px"
                android:layout_below="@id/printer_type"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/paper_width"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/devider1"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:textColor="#fff"
                    android:id="@+id/paperWidth_text"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dip"
                    android:text="@string/choose_paper_width" />
                <RadioGroup
                    android:layout_marginLeft="30dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/width_58mm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="58mm"
                        android:textColor="#fff"
                        android:layout_weight="1"
                         />
                    <RadioButton
                        android:id="@+id/width_80mm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="80mm"
                        android:textColor="#fff"
                        android:layout_weight="1"
                         />
                </RadioGroup>
            </LinearLayout>

            <View
                android:id="@+id/devider2"
                android:layout_width="fill_parent"
                android:layout_height="3px"
                android:layout_below="@id/paper_width"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/encoding_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/devider2"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:textColor="#fff"
                    android:id="@+id/textView2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dip"
                    android:layout_weight="2"
                    android:text="@string/choose_Encoding" />

                <Spinner
                    android:id="@+id/spinner_encoding_type"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <View
                android:id="@+id/devider3"
                android:layout_width="fill_parent"
                android:layout_height="3px"
                android:layout_below="@id/encoding_type"
                android:background="?android:attr/listDivider" />
            <!-- 条码部分 -->

            <LinearLayout
                android:id="@+id/barcode_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/devider3"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:textColor="#fff"
                    android:id="@+id/textView1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dip"
                    android:layout_weight="2"
                    android:text="@string/choose_barcode_type" />

                <Spinner
                    android:id="@+id/spinner_barcode_type"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
            <!-- 剪切 -->
            <LinearLayout
                android:id="@+id/print_barcode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/barcode_type"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/bar_code_num"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/default_char"
                    android:background="@drawable/edit_background"
                    android:textColor="#000"
                    android:singleLine="true" />

            </LinearLayout>

            <View
                android:id="@+id/devider4"
                android:layout_width="fill_parent"
                android:layout_height="3px"
                android:layout_below="@id/print_barcode"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/print_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/devider4"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnPrintText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/print_text" />
                <Button
                    android:id="@+id/btPrintPDF"
                    android:text="@string/print_pdf"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:id="@+id/devider5"
                android:layout_width="fill_parent"
                android:layout_height="3px"
                android:layout_below="@id/print_text"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/print_image"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/devider5"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >
                <Button
                    android:id="@+id/btPrnLable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/print_lable"
                    />
                <Button
                    android:id="@+id/btnPrintImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/print_image" />

                <Button
                    android:id="@+id/btnPrintBarCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/print_bar_code" />
            </LinearLayout>

            <View
                android:id="@+id/devider6"
                android:layout_width="fill_parent"
                android:layout_height="3px"
                android:layout_below="@id/print_image"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/print_table"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/devider6"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnPrintNote"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/print_note" />

                <Button
                    android:id="@+id/btnPrintTable"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_weight="1"
                    android:text="@string/print_table" />
            </LinearLayout>
            <View
                android:id="@+id/devider7"
                android:layout_width="fill_parent"
                android:layout_height="3px"
                android:layout_below="@id/print_table"
                android:background="?android:attr/listDivider" />
            <LinearLayout
                android:id="@+id/ll_webState"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/devider7"
                android:layout_marginTop="5dip"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btPrintWeb"
                    android:text="@string/print_web"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btGetState"
                    android:text="@string/query_printer_status"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <!--
            <View
                android:id="@+id/devider8"
                android:layout_width="fill_parent"
                android:layout_height="3px"
                android:layout_below="@id/ll_webState"
                android:background="?android:attr/listDivider" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/devider8"
                android:layout_marginTop="5dip"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btSetBlack"
                    android:text="设置黑标模式"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btM22Test"
                    android:text="M22打印测试"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            -->
        </RelativeLayout>
    </ScrollView>
</LinearLayout>